objects/ApiLog__c.object
<CustomObject>
    <fields>
        <fullName>Classname__c</fullName>
        <label>Classname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>ExceptionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ApiLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Classname__c</columns>
        <columns>MethodName__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LineNumber__c</columns>
        <columns>Message__c</columns>
        <columns>StackTrace__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Loggers</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>StackTrace__c</columns>
        <columns>LineNumber__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>NAME</columns>
        <columns>Classname__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Loggers</label>
    </listViews>
    <nameField>
        <label>ApiLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApiLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>